# EWU-Comp-Sci

CSCD305/Assignment1/: main.cpp
CSCD316/Assignment 2/Hartals_/: Input  output
CSCD316/Assignment 2/src/: Hartals.java
CSCD316/Assignment 6/: Problem draft.docx
CSCD316/Assignment 6/MechanicsProgram/: InputOne.txt  InputTwo.txt
CSCD316/Assignment 7/: Output.txt
CSCD316/Assignment 7/LCD Display/: Input.txt  Output.txt
CSCD316/Assignment 7/src/: Minesweeper.java
CSCD316/Assignment1/: input.txt  output.txt
CSCD316/Assignment1/src/: TheTrip.java
CSCD316/Assignment4.2/src/: Permutations.java
CSCD316/Assignment4/src/: Permutations.java
CSCD316/Knapsack/: Input  InputSample
CSCD320/: Final Study.docx
CSCD320/Homework1/: Question 1.docx  hw1.docx
CSCD320/Homework6/: Tester.java  WeightedGraph.java
CSCD330/EchoServer/: CMakeLists.txt  Client.c  EchoServer.c
CSCD340/labs/Lab7/: CMakeLists.txt  Makefile  cscd340Lab7.c
CSCD340/labs/Lab7/Commands/: commands.c  commands.h
CSCD340/labs/Lab7/linkedlist/: linkedList.c  linkedList.h  listUtils.c  listUtils.h  requiredIncludes.h
CSCD340/labs/Lab7/myData/: myData.c  myData.h
CSCD340/labs/Lab7/pipes/: pipes.c  pipes.h
CSCD340/labs/Lab7/process/: process.c  process.h
CSCD340/labs/Lab7/tokenize/: makeArgs.c
CSCD340/labs/Lab7/us_shell/: ussh.c  ussh.h
CSCD340/labs/Lab7/ussh_shell/: ussh.c  ussh.h
CSCD340/labs/Lab7/utils/: myUtils.c  myUtils.h
CSCD349/: Final CSCD 349 overview.docx
CSCD349/Midterm/: ToenniessenAlexMidterm.doc
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+327 files in other folders)
